Fix zooming positoning issue on mobile screens

--- a/style.css
+++ b/style.css
@@ -15,11 +15,9 @@ body {
   padding: 1.3rem 1.3rem 0 1.3rem;
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
 }
 
 .main {
-  width: 100%;
   padding: 1rem;
 }
 
@@ -188,18 +186,8 @@ body {
 
 .work {
   margin: 5.5rem 0 0;
-  display: -ms-grid;
-  display: grid;
   color: white;
   position: relative;
-  -ms-grid-columns: 1fr;
-  -ms-grid-rows: 0.1fr 1fr 1fr 1fr 1fr;
-  grid-template-areas:
-    'work__header'
-    'first__card'
-    'second__card'
-    'third__card'
-    'fourth__card';
 }
 
 .work__header {
@@ -277,7 +265,6 @@ body {
 .project_container {
   display: flex;
   flex-direction: column;
-  width: 100%;
 }
 
 .second__card,
@@ -290,10 +277,7 @@ body {
   display: flex;
   grid-area: card__image;
   width: 100%;
-
-  /* height: 236px; */
-  max-height: 100%;
-  max-width: 100%;
+  height: min(10rem);
   background: #edecff;
   margin: 0 auto;
   padding: 1.3rem;
@@ -360,13 +344,13 @@ body {
   padding-left: 0;
   justify-content: center;
   align-items: center;
+  width: 90vw;
 }
 
 .projects__languages--first {
   text-align: center;
   border-right: 1px solid #555;
-  margin-right: 1rem;
-  padding: 1.5rem;
+  padding: 1.2rem;
 }
 
 .projects-text {
@@ -380,23 +364,20 @@ body {
 .projects__languages--second {
   text-align: center;
   border-right: 1px solid #555;
-  margin-right: 1rem;
-  padding: 1.5rem;
+  padding: 1.2rem;
   float: left;
 }
 
 .projects__languages--third {
   text-align: center;
   border-right: 1px solid #555;
-  margin-right: 1rem;
-  padding: 1.5rem;
+  padding: 1.2rem;
   float: left;
 }
 
 .projects__languages--fourth {
   text-align: center;
-  margin-right: 1rem;
-  padding: 1.5rem;
+  padding: 1.2rem;
   float: left;
 }
 
@@ -476,7 +457,7 @@ textarea {
     width: 100%;
     left: 0;
     top: 0;
-    padding: 1rem 8.5rem;
+    padding: 2rem 8.5rem;
   }
 
   .nav__item--container {
@@ -565,7 +546,7 @@ textarea {
 
   .card__image {
     width: 100%;
-    height: 100%;
+    height: min(100%);
     background: #edecff;
     margin: 0 1.5rem;
   }
@@ -574,7 +555,7 @@ textarea {
     display: grid;
     height: auto;
     width: 100%;
-    grid-template-columns: 1fr 0.6fr;
+    grid-template-columns: 1fr 0.8fr;
     grid-template-rows: 1fr;
     grid-template-areas: 'first__img projects';
   }
@@ -583,7 +564,7 @@ textarea {
     display: grid;
     height: auto;
     width: 100%;
-    grid-template-columns: 0.6fr 1fr;
+    grid-template-columns: 0.8fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: 'projects second_img';
   }
@@ -592,7 +573,7 @@ textarea {
     display: grid;
     height: auto;
     width: 100%;
-    grid-template-columns: 1fr 0.6fr;
+    grid-template-columns: 1fr 0.8fr;
     grid-template-rows: 1fr;
     grid-template-areas: 'third_img projects';
   }
@@ -601,7 +582,7 @@ textarea {
     display: grid;
     height: auto;
     width: 100%;
-    grid-template-columns: 0.6fr 1fr;
+    grid-template-columns: 0.8fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: 'projects fourth_img';
   }
